# Fitsee

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1a2b3c4d5e6f_add_renderjob.py
app/: main.py
app/core/: config.py  database.py  deps.py  security.py
app/db/: base.py  models.py
app/modules/auth/: router.py  schemas.py
app/modules/catalog/: router.py  schemas.py
app/modules/renders/: router.py  schemas.py  service.py
app/modules/try_on/: router.py
app/modules/users/: router.py  schemas.py  utils.py
app/storage/: local.py
app/worker/: renderer.py  run.py  tasks.py
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_renders.py  test_try_scenario.py
